[FIX] Send: Add spacing for destination tag hider
RT-2378 #inreview
On the Send tab, the Destination tag has a hide-link behind. Instead of
separating it with a pipe, use spacing instead.

--- a/src/less/ripple/tabs.less
+++ b/src/less/ripple/tabs.less
@@ -1448,6 +1448,10 @@
       padding: 0;
       list-style-type: none;
     }
+
+    label[for=send_dt] {
+      margin-right: 20px;
+    }
   }
 
   .mode-status {
